--- a/package.json
+++ b/package.json
@@ -6,22 +6,37 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "tsx src/lib/db/migrate.ts"
   },
   "dependencies": {
+    "@firebase/auth": "^1.10.1",
+    "@neondatabase/serverless": "^1.0.0",
+    "@radix-ui/themes": "^3.2.1",
+    "@tanstack/react-query": "^5.75.2",
+    "@vercel/postgres": "^0.10.0",
+    "class-variance-authority": "^0.7.1",
+    "drizzle-orm": "^0.43.1",
+    "firebase": "^11.6.1",
+    "lucide-react": "^0.507.0",
+    "next": "15.3.1",
+    "next-auth": "^4.24.11",
+    "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "react-hot-toast": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "tsx": "^4.19.4",
+    "typescript": "^5"
   }
 }
