--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jinzo",
+  "name": "betwise",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,15 +7,20 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migrate": "tsx src/lib/db/migrate.ts"
+    "migrate": "tsx src/lib/db/migrate.ts",
+    "update-schema": "tsx src/scripts/update-schema.ts"
   },
   "dependencies": {
     "@firebase/auth": "^1.10.1",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/themes": "^3.2.1",
     "@tanstack/react-query": "^5.75.2",
+    "@types/recharts": "^1.8.29",
     "@vercel/postgres": "^0.10.0",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
+    "date-fns": "^2.30.0",
+    "decimal.js": "^10.5.0",
     "drizzle-orm": "^0.43.1",
     "firebase": "^11.6.1",
     "lucide-react": "^0.507.0",
@@ -25,6 +30,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "recharts": "^2.15.3",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
