--- a/package.json
+++ b/package.json
@@ -13,16 +13,23 @@
   "dependencies": {
     "@firebase/auth": "^1.10.1",
     "@neondatabase/serverless": "^1.0.0",
+    "@radix-ui/react-checkbox": "^1.2.3",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@radix-ui/themes": "^3.2.1",
     "@tanstack/react-query": "^5.75.2",
     "@types/recharts": "^1.8.29",
     "@vercel/postgres": "^0.10.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "decimal.js": "^10.5.0",
     "drizzle-orm": "^0.43.1",
     "firebase": "^11.6.1",
+    "framer-motion": "^12.9.4",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
@@ -31,6 +38,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.3",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
@@ -43,6 +51,7 @@
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
     "tsx": "^4.19.4",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   }
 }
