--- a/package.json
+++ b/package.json
@@ -23,17 +23,21 @@
     "@radix-ui/themes": "^3.2.1",
     "@tanstack/react-query": "^5.75.2",
     "@types/recharts": "^1.8.29",
+    "@types/ws": "^8.18.1",
     "@vercel/postgres": "^0.10.0",
     "axios": "^1.9.0",
+    "bitcoin-core": "^5.0.0",
     "chart.js": "^4.4.9",
     "chartjs-adapter-date-fns": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "decimal.js": "^10.5.0",
+    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "firebase": "^11.6.1",
     "framer-motion": "^12.9.4",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
@@ -43,11 +47,14 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.3",
+    "room-populate": "^1.0.18",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.7.2",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -61,6 +68,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5"
