--- a/rust-trading-engine/Cargo.toml
+++ b/rust-trading-engine/Cargo.toml
@@ -1,49 +1,57 @@
 [package]
-name = "trading-engine"
+name = "prediction-engine"
 version = "0.1.0"
 edition = "2021"
-
-[lib]
-name = "trading_engine"
-path = "src/lib.rs"
-
-[[bin]]
-name = "trading-server"
-path = "src/main.rs"
-
-[[bin]]
-name = "simple-trading-server"
-path = "src/simple_main.rs"
+authors = ["Trading Engine Team"]
+description = "A Rust-based trading engine for prediction markets like Probo"
 
 [dependencies]
-# Core functionality
-tokio = { version = "1.36.0", features = ["full"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-chrono = { version = "0.4", features = ["serde"] }
-rust_decimal = { version = "1.33", features = ["serde"] }
-uuid = { version = "1.7", features = ["v4", "serde"] }
+# Core dependencies
+tokio = { version = "1.34.0", features = ["full"] }
+uuid = { version = "1.6.1", features = ["v4", "serde"] }
+chrono = { version = "0.4.31", features = ["serde"] }
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
 
-# Web server
-actix-web = "4.4.1"
-actix-rt = "2.9.0"
-actix-cors = "0.6.5"
-actix-web-actors = "4.2.0"
+# Async and concurrency tools
+async-trait = "0.1.74"
+futures = "0.3.29"
+tokio-stream = { version = "0.1.14", features = ["sync"] }
+parking_lot = "0.12.1"
 
-# Websockets 
-actix = "0.13.1"
+# Web and networking
+warp = "0.3.6"
+reqwest = { version = "0.11.22", features = ["json"] }
+tokio-tungstenite = "0.20.1"
 
-# Database connectivity
-sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "rust_decimal"] }
+# Database - replacing Diesel with SQLx
+sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "rust_decimal", "json"] }
+deadpool = "0.10.0"
 deadpool-postgres = "0.11.0"
-tokio-postgres = "0.7.10"
+
+# Logging and monitoring
+env_logger = "0.10.1"
+log = "0.4.20"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 
 # Utilities
-thiserror = "1.0"
-anyhow = "1.0"
-tracing = "0.1"
-tracing-subscriber = "0.3"
-dotenv = "0.15"
-env_logger = "0.10"
-async-trait = "0.1"
-num_cpus = "1.16.0"
+rust_decimal = { version = "1.33.1", features = ["serde-with-str"] }
+rand = "0.8.5"
+thiserror = "1.0.51"
+anyhow = "1.0.76"
+dotenv = "0.15.0"
+
+[dev-dependencies]
+# Testing
+tokio-test = "0.4.3"
+mockall = "0.11.4"
+criterion = "0.5.1"
+
+[[bin]]
+name = "prediction-engine"
+path = "src/main.rs"
+
+[lib]
+name = "prediction_engine"
+path = "src/lib.rs"
